# test-pydantic

./: README.md  pyproject.toml
src/app/: main.py
src/app/models/: user.py
tests/: test_user.py
