[tool.poetry]
name = "test-pydantic"
version = "0.1.0"
description = ""
authors = ["codeanish <anish@codeanish.com>"]
readme = "README.md"
packages = [{include = "test_pydantic"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
email-validator = "^2.1.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
